# coop-review-core

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
src/coop_review_core/: __init__.py  cliutils.py  config.py  delta.py  diagnostics.py  errors.py  gitscope.py  progress.py  report.py  severity.py  suite.py  suppressions.py  upgrade.py
tests/: conftest.py  test_api_surface.py  test_cliutils.py  test_config.py  test_delta.py  test_diagnostics.py  test_discover_config.py  test_gitscope.py  test_ignores.py  test_progress.py  test_report.py  test_severity.py  test_suite.py  test_suppressions.py  test_upgrade.py
